--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.6",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
