--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.8",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.6",
     "typescript": "^4.5.4",
