--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "@types/node": "^17.0.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.6",
     "typescript": "^4.5.4",
@@ -46,6 +52,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.22",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.19"
   }
 }
