--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.6",
     "typescript": "^4.5.4",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
